// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/inputs/ZigButton renders ZigButton contained variant by default 1`] = `
<button
  class="MuiLoadingButton-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root css-z3a501-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
  id=":r4:"
  tabindex="0"
  type="button"
/>
`;

exports[`components/inputs/ZigButton renders ZigButton contained variant by default 2`] = `
CSSStyleDeclaration {
  "0": "font",
  "1": "text-rendering",
  "10": "align-items",
  "11": "cursor",
  "12": "color",
  "13": "padding",
  "14": "background-color",
  "15": "box-sizing",
  "16": "justify-content",
  "17": "position",
  "18": "outline",
  "19": "border",
  "2": "letter-spacing",
  "20": "margin",
  "21": "border-radius",
  "22": "user-select",
  "23": "vertical-align",
  "24": "text-decoration",
  "25": "font-family",
  "26": "font-weight",
  "27": "font-size",
  "28": "min-width",
  "29": "transition",
  "3": "word-spacing",
  "30": "box-shadow",
  "31": "overflow",
  "32": "z-index",
  "33": "min-height",
  "34": "visibility",
  "4": "line-height",
  "5": "text-transform",
  "6": "text-indent",
  "7": "text-shadow",
  "8": "display",
  "9": "text-align",
  "_importants": {
    "align-items": "",
    "background": "",
    "background-color": "",
    "border": "",
    "border-radius": "",
    "box-shadow": "",
    "box-sizing": "",
    "color": "",
    "cursor": "",
    "display": "",
    "font": "",
    "font-family": "",
    "font-size": "",
    "font-weight": "",
    "justify-content": "",
    "letter-spacing": "",
    "line-height": "",
    "margin": "",
    "min-height": "",
    "min-width": "",
    "outline": "",
    "overflow": "",
    "padding": undefined,
    "padding-right": "",
    "position": "",
    "text-align": "",
    "text-decoration": "",
    "text-indent": "",
    "text-rendering": "",
    "text-shadow": "",
    "text-transform": "",
    "transition": "",
    "user-select": "",
    "vertical-align": "",
    "visibility": undefined,
    "word-spacing": "",
    "z-index": "",
  },
  "_length": 35,
  "_onChange": [Function],
  "_values": {
    "align-items": "center",
    "background-color": "rgb(118, 130, 247)",
    "border": "0px",
    "border-bottom": "0px",
    "border-bottom-color": "buttonface",
    "border-bottom-style": "outset",
    "border-bottom-width": "0px",
    "border-left": "0px",
    "border-left-color": "buttonface",
    "border-left-style": "outset",
    "border-left-width": "0px",
    "border-radius": "5px",
    "border-right": "0px",
    "border-right-color": "buttonface",
    "border-right-style": "outset",
    "border-right-width": "0px",
    "border-top": "0px",
    "border-top-color": "buttonface",
    "border-top-style": "outset",
    "border-top-width": "0px",
    "border-width": "0px",
    "box-shadow": "0px 12px 16px -8px rgba(25, 25, 39, 0.36)",
    "box-sizing": "border-box",
    "color": "rgb(225, 233, 240)",
    "cursor": "pointer",
    "display": "inline-flex",
    "font": "-webkit-small-control",
    "font-family": "Avenir Next,Roboto,Helvetica,Arial,sans-serif",
    "font-size": "11px",
    "font-weight": "600",
    "justify-content": "center",
    "letter-spacing": "1.1px",
    "line-height": "1.75",
    "margin": "0px",
    "margin-bottom": "0px",
    "margin-left": "0px",
    "margin-right": "0px",
    "margin-top": "0px",
    "min-height": "36px",
    "min-width": "76px",
    "outline": "0",
    "overflow": "hidden",
    "padding": "6px 18px 6px 18px",
    "padding-bottom": "6px",
    "padding-left": "18px",
    "padding-right": "18px",
    "padding-top": "6px",
    "position": "relative",
    "text-align": "center",
    "text-decoration": "none",
    "text-indent": "0",
    "text-rendering": "auto",
    "text-shadow": "none",
    "text-transform": "uppercase",
    "transition": "background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
    "user-select": "none",
    "vertical-align": "middle",
    "visibility": "visible",
    "word-spacing": "normal",
    "z-index": "1",
  },
}
`;

exports[`components/inputs/ZigButton renders ZigButton large size 1`] = `
<button
  class="MuiLoadingButton-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButtonBase-root css-172u00w-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
  id=":r2:"
  tabindex="0"
  type="button"
/>
`;

exports[`components/inputs/ZigButton renders ZigButton large size 2`] = `
CSSStyleDeclaration {
  "0": "font",
  "1": "text-rendering",
  "10": "align-items",
  "11": "cursor",
  "12": "color",
  "13": "padding",
  "14": "background-color",
  "15": "box-sizing",
  "16": "justify-content",
  "17": "position",
  "18": "outline",
  "19": "border",
  "2": "letter-spacing",
  "20": "margin",
  "21": "border-radius",
  "22": "user-select",
  "23": "vertical-align",
  "24": "text-decoration",
  "25": "font-family",
  "26": "font-weight",
  "27": "font-size",
  "28": "min-width",
  "29": "transition",
  "3": "word-spacing",
  "30": "box-shadow",
  "31": "overflow",
  "32": "z-index",
  "33": "min-height",
  "34": "visibility",
  "4": "line-height",
  "5": "text-transform",
  "6": "text-indent",
  "7": "text-shadow",
  "8": "display",
  "9": "text-align",
  "_importants": {
    "align-items": "",
    "background": "",
    "background-color": "",
    "border": "",
    "border-radius": "",
    "box-shadow": "",
    "box-sizing": "",
    "color": "",
    "cursor": "",
    "display": "",
    "font": "",
    "font-family": "",
    "font-size": "",
    "font-weight": "",
    "justify-content": "",
    "letter-spacing": "",
    "line-height": "",
    "margin": "",
    "min-height": "",
    "min-width": "",
    "outline": "",
    "overflow": "",
    "padding": undefined,
    "padding-right": "",
    "position": "",
    "text-align": "",
    "text-decoration": "",
    "text-indent": "",
    "text-rendering": "",
    "text-shadow": "",
    "text-transform": "",
    "transition": "",
    "user-select": "",
    "vertical-align": "",
    "visibility": undefined,
    "word-spacing": "",
    "z-index": "",
  },
  "_length": 35,
  "_onChange": [Function],
  "_values": {
    "align-items": "center",
    "background-color": "rgb(118, 130, 247)",
    "border": "0px",
    "border-bottom": "0px",
    "border-bottom-color": "buttonface",
    "border-bottom-style": "outset",
    "border-bottom-width": "0px",
    "border-left": "0px",
    "border-left-color": "buttonface",
    "border-left-style": "outset",
    "border-left-width": "0px",
    "border-radius": "5px",
    "border-right": "0px",
    "border-right-color": "buttonface",
    "border-right-style": "outset",
    "border-right-width": "0px",
    "border-top": "0px",
    "border-top-color": "buttonface",
    "border-top-style": "outset",
    "border-top-width": "0px",
    "border-width": "0px",
    "box-shadow": "0px 12px 16px -8px rgba(25, 25, 39, 0.36)",
    "box-sizing": "border-box",
    "color": "rgb(225, 233, 240)",
    "cursor": "pointer",
    "display": "inline-flex",
    "font": "-webkit-small-control",
    "font-family": "Avenir Next,Roboto,Helvetica,Arial,sans-serif",
    "font-size": "13px",
    "font-weight": "600",
    "justify-content": "center",
    "letter-spacing": "1.1px",
    "line-height": "18px",
    "margin": "0px",
    "margin-bottom": "0px",
    "margin-left": "0px",
    "margin-right": "0px",
    "margin-top": "0px",
    "min-height": "48px",
    "min-width": "110px",
    "outline": "0",
    "overflow": "hidden",
    "padding": "8px 30px 8px 30px",
    "padding-bottom": "8px",
    "padding-left": "30px",
    "padding-right": "30px",
    "padding-top": "8px",
    "position": "relative",
    "text-align": "center",
    "text-decoration": "none",
    "text-indent": "0",
    "text-rendering": "auto",
    "text-shadow": "none",
    "text-transform": "uppercase",
    "transition": "background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
    "user-select": "none",
    "vertical-align": "middle",
    "visibility": "visible",
    "word-spacing": "normal",
    "z-index": "1",
  },
}
`;

exports[`components/inputs/ZigButton renders ZigButton medium size 1`] = `
<button
  class="MuiLoadingButton-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root css-z3a501-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
  id=":r1:"
  tabindex="0"
  type="button"
/>
`;

exports[`components/inputs/ZigButton renders ZigButton medium size 2`] = `
CSSStyleDeclaration {
  "0": "font",
  "1": "text-rendering",
  "10": "align-items",
  "11": "cursor",
  "12": "color",
  "13": "padding",
  "14": "background-color",
  "15": "box-sizing",
  "16": "justify-content",
  "17": "position",
  "18": "outline",
  "19": "border",
  "2": "letter-spacing",
  "20": "margin",
  "21": "border-radius",
  "22": "user-select",
  "23": "vertical-align",
  "24": "text-decoration",
  "25": "font-family",
  "26": "font-weight",
  "27": "font-size",
  "28": "min-width",
  "29": "transition",
  "3": "word-spacing",
  "30": "box-shadow",
  "31": "overflow",
  "32": "z-index",
  "33": "min-height",
  "34": "visibility",
  "4": "line-height",
  "5": "text-transform",
  "6": "text-indent",
  "7": "text-shadow",
  "8": "display",
  "9": "text-align",
  "_importants": {
    "align-items": "",
    "background": "",
    "background-color": "",
    "border": "",
    "border-radius": "",
    "box-shadow": "",
    "box-sizing": "",
    "color": "",
    "cursor": "",
    "display": "",
    "font": "",
    "font-family": "",
    "font-size": "",
    "font-weight": "",
    "justify-content": "",
    "letter-spacing": "",
    "line-height": "",
    "margin": "",
    "min-height": "",
    "min-width": "",
    "outline": "",
    "overflow": "",
    "padding": undefined,
    "padding-right": "",
    "position": "",
    "text-align": "",
    "text-decoration": "",
    "text-indent": "",
    "text-rendering": "",
    "text-shadow": "",
    "text-transform": "",
    "transition": "",
    "user-select": "",
    "vertical-align": "",
    "visibility": undefined,
    "word-spacing": "",
    "z-index": "",
  },
  "_length": 35,
  "_onChange": [Function],
  "_values": {
    "align-items": "center",
    "background-color": "rgb(118, 130, 247)",
    "border": "0px",
    "border-bottom": "0px",
    "border-bottom-color": "buttonface",
    "border-bottom-style": "outset",
    "border-bottom-width": "0px",
    "border-left": "0px",
    "border-left-color": "buttonface",
    "border-left-style": "outset",
    "border-left-width": "0px",
    "border-radius": "5px",
    "border-right": "0px",
    "border-right-color": "buttonface",
    "border-right-style": "outset",
    "border-right-width": "0px",
    "border-top": "0px",
    "border-top-color": "buttonface",
    "border-top-style": "outset",
    "border-top-width": "0px",
    "border-width": "0px",
    "box-shadow": "0px 12px 16px -8px rgba(25, 25, 39, 0.36)",
    "box-sizing": "border-box",
    "color": "rgb(225, 233, 240)",
    "cursor": "pointer",
    "display": "inline-flex",
    "font": "-webkit-small-control",
    "font-family": "Avenir Next,Roboto,Helvetica,Arial,sans-serif",
    "font-size": "11px",
    "font-weight": "600",
    "justify-content": "center",
    "letter-spacing": "1.1px",
    "line-height": "1.75",
    "margin": "0px",
    "margin-bottom": "0px",
    "margin-left": "0px",
    "margin-right": "0px",
    "margin-top": "0px",
    "min-height": "36px",
    "min-width": "76px",
    "outline": "0",
    "overflow": "hidden",
    "padding": "6px 18px 6px 18px",
    "padding-bottom": "6px",
    "padding-left": "18px",
    "padding-right": "18px",
    "padding-top": "6px",
    "position": "relative",
    "text-align": "center",
    "text-decoration": "none",
    "text-indent": "0",
    "text-rendering": "auto",
    "text-shadow": "none",
    "text-transform": "uppercase",
    "transition": "background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
    "user-select": "none",
    "vertical-align": "middle",
    "visibility": "visible",
    "word-spacing": "normal",
    "z-index": "1",
  },
}
`;

exports[`components/inputs/ZigButton renders ZigButton outlined variant 1`] = `
<button
  class="MuiLoadingButton-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root css-uqq2v3-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
  id=":r5:"
  tabindex="0"
  type="button"
/>
`;

exports[`components/inputs/ZigButton renders ZigButton outlined variant 2`] = `
CSSStyleDeclaration {
  "0": "font",
  "1": "text-rendering",
  "10": "align-items",
  "11": "cursor",
  "12": "color",
  "13": "padding",
  "14": "background-color",
  "15": "box-sizing",
  "16": "justify-content",
  "17": "position",
  "18": "outline",
  "19": "border",
  "2": "letter-spacing",
  "20": "margin",
  "21": "border-radius",
  "22": "user-select",
  "23": "vertical-align",
  "24": "text-decoration",
  "25": "font-family",
  "26": "font-weight",
  "27": "font-size",
  "28": "min-width",
  "29": "transition",
  "3": "word-spacing",
  "30": "border-color",
  "31": "min-height",
  "32": "visibility",
  "4": "line-height",
  "5": "text-transform",
  "6": "text-indent",
  "7": "text-shadow",
  "8": "display",
  "9": "text-align",
  "_importants": {
    "align-items": "",
    "background-color": "",
    "border": "",
    "border-color": "",
    "border-radius": "",
    "box-sizing": "",
    "color": "",
    "cursor": "",
    "display": "",
    "font": "",
    "font-family": "",
    "font-size": "",
    "font-weight": "",
    "justify-content": "",
    "letter-spacing": "",
    "line-height": "",
    "margin": "",
    "min-height": "",
    "min-width": "",
    "outline": "",
    "padding": undefined,
    "padding-right": "",
    "position": "",
    "text-align": "",
    "text-decoration": "",
    "text-indent": "",
    "text-rendering": "",
    "text-shadow": "",
    "text-transform": "",
    "transition": "",
    "user-select": "",
    "vertical-align": "",
    "visibility": undefined,
    "word-spacing": "",
  },
  "_length": 33,
  "_onChange": [Function],
  "_values": {
    "align-items": "center",
    "background-color": "transparent",
    "border": "1px solid rgba(137, 137, 154, 0.5)",
    "border-bottom": "1px solid rgba(137, 137, 154, 0.5)",
    "border-bottom-color": "#35334a",
    "border-bottom-style": "solid",
    "border-bottom-width": "1px",
    "border-color": "#35334a",
    "border-left": "1px solid rgba(137, 137, 154, 0.5)",
    "border-left-color": "#35334a",
    "border-left-style": "solid",
    "border-left-width": "1px",
    "border-radius": "5px",
    "border-right": "1px solid rgba(137, 137, 154, 0.5)",
    "border-right-color": "#35334a",
    "border-right-style": "solid",
    "border-right-width": "1px",
    "border-style": "solid",
    "border-top": "1px solid rgba(137, 137, 154, 0.5)",
    "border-top-color": "#35334a",
    "border-top-style": "solid",
    "border-top-width": "1px",
    "border-width": "1px",
    "box-sizing": "border-box",
    "color": "rgb(137, 137, 154)",
    "cursor": "pointer",
    "display": "inline-flex",
    "font": "-webkit-small-control",
    "font-family": "Avenir Next,Roboto,Helvetica,Arial,sans-serif",
    "font-size": "11px",
    "font-weight": "500",
    "justify-content": "center",
    "letter-spacing": "0.55px",
    "line-height": "1.75",
    "margin": "0px",
    "margin-bottom": "0px",
    "margin-left": "0px",
    "margin-right": "0px",
    "margin-top": "0px",
    "min-height": "36px",
    "min-width": "76px",
    "outline": "0",
    "padding": "6px 18px 6px 18px",
    "padding-bottom": "6px",
    "padding-left": "18px",
    "padding-right": "18px",
    "padding-top": "6px",
    "position": "relative",
    "text-align": "center",
    "text-decoration": "none",
    "text-indent": "0",
    "text-rendering": "auto",
    "text-shadow": "none",
    "text-transform": "none",
    "transition": "background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
    "user-select": "none",
    "vertical-align": "middle",
    "visibility": "visible",
    "word-spacing": "normal",
  },
}
`;

exports[`components/inputs/ZigButton renders ZigButton small size 1`] = `
<button
  class="MuiLoadingButton-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButtonBase-root css-25ezg8-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
  id=":r0:"
  tabindex="0"
  type="button"
/>
`;

exports[`components/inputs/ZigButton renders ZigButton small size 2`] = `
CSSStyleDeclaration {
  "0": "font",
  "1": "text-rendering",
  "10": "align-items",
  "11": "cursor",
  "12": "color",
  "13": "padding",
  "14": "background-color",
  "15": "box-sizing",
  "16": "justify-content",
  "17": "position",
  "18": "outline",
  "19": "border",
  "2": "letter-spacing",
  "20": "margin",
  "21": "border-radius",
  "22": "user-select",
  "23": "vertical-align",
  "24": "text-decoration",
  "25": "font-family",
  "26": "font-weight",
  "27": "font-size",
  "28": "min-width",
  "29": "transition",
  "3": "word-spacing",
  "30": "box-shadow",
  "31": "overflow",
  "32": "z-index",
  "33": "min-height",
  "34": "visibility",
  "4": "line-height",
  "5": "text-transform",
  "6": "text-indent",
  "7": "text-shadow",
  "8": "display",
  "9": "text-align",
  "_importants": {
    "align-items": "",
    "background": "",
    "background-color": "",
    "border": "",
    "border-radius": "",
    "box-shadow": "",
    "box-sizing": "",
    "color": "",
    "cursor": "",
    "display": "",
    "font": "",
    "font-family": "",
    "font-size": "",
    "font-weight": "",
    "justify-content": "",
    "letter-spacing": "",
    "line-height": "",
    "margin": "",
    "min-height": "",
    "min-width": "",
    "outline": "",
    "overflow": "",
    "padding": "",
    "position": "",
    "text-align": "",
    "text-decoration": "",
    "text-indent": "",
    "text-rendering": "",
    "text-shadow": "",
    "text-transform": "",
    "transition": "",
    "user-select": "",
    "vertical-align": "",
    "visibility": undefined,
    "word-spacing": "",
    "z-index": "",
  },
  "_length": 35,
  "_onChange": [Function],
  "_values": {
    "align-items": "center",
    "background-color": "rgb(118, 130, 247)",
    "border": "0px",
    "border-bottom": "0px",
    "border-bottom-color": "buttonface",
    "border-bottom-style": "outset",
    "border-bottom-width": "0px",
    "border-left": "0px",
    "border-left-color": "buttonface",
    "border-left-style": "outset",
    "border-left-width": "0px",
    "border-radius": "5px",
    "border-right": "0px",
    "border-right-color": "buttonface",
    "border-right-style": "outset",
    "border-right-width": "0px",
    "border-top": "0px",
    "border-top-color": "buttonface",
    "border-top-style": "outset",
    "border-top-width": "0px",
    "border-width": "0px",
    "box-shadow": "0px 12px 16px -8px rgba(25, 25, 39, 0.36)",
    "box-sizing": "border-box",
    "color": "rgb(225, 233, 240)",
    "cursor": "pointer",
    "display": "inline-flex",
    "font": "-webkit-small-control",
    "font-family": "Avenir Next,Roboto,Helvetica,Arial,sans-serif",
    "font-size": "11px",
    "font-weight": "600",
    "justify-content": "center",
    "letter-spacing": "1.1px",
    "line-height": "1.75",
    "margin": "0px",
    "margin-bottom": "0px",
    "margin-left": "0px",
    "margin-right": "0px",
    "margin-top": "0px",
    "min-height": "30px",
    "min-width": "76px",
    "outline": "0",
    "overflow": "hidden",
    "padding": "4px 18px",
    "padding-bottom": "4px",
    "padding-left": "18px",
    "padding-right": "18px",
    "padding-top": "4px",
    "position": "relative",
    "text-align": "center",
    "text-decoration": "none",
    "text-indent": "0",
    "text-rendering": "auto",
    "text-shadow": "none",
    "text-transform": "uppercase",
    "transition": "background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
    "user-select": "none",
    "vertical-align": "middle",
    "visibility": "visible",
    "word-spacing": "normal",
    "z-index": "1",
  },
}
`;

exports[`components/inputs/ZigButton renders ZigButton text variant 1`] = `
<button
  class="MuiLoadingButton-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root css-oq91cm-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
  id=":r6:"
  tabindex="0"
  type="button"
/>
`;

exports[`components/inputs/ZigButton renders ZigButton text variant 2`] = `
CSSStyleDeclaration {
  "0": "font",
  "1": "text-rendering",
  "10": "align-items",
  "11": "cursor",
  "12": "color",
  "13": "padding",
  "14": "background-color",
  "15": "box-sizing",
  "16": "justify-content",
  "17": "position",
  "18": "outline",
  "19": "border",
  "2": "letter-spacing",
  "20": "margin",
  "21": "border-radius",
  "22": "user-select",
  "23": "vertical-align",
  "24": "text-decoration",
  "25": "font-family",
  "26": "font-weight",
  "27": "font-size",
  "28": "min-width",
  "29": "transition",
  "3": "word-spacing",
  "30": "min-height",
  "31": "visibility",
  "4": "line-height",
  "5": "text-transform",
  "6": "text-indent",
  "7": "text-shadow",
  "8": "display",
  "9": "text-align",
  "_importants": {
    "align-items": "",
    "background-color": "",
    "border": "",
    "border-radius": "",
    "box-sizing": "",
    "color": "",
    "cursor": "",
    "display": "",
    "font": "",
    "font-family": "",
    "font-size": "",
    "font-weight": "important",
    "justify-content": "",
    "letter-spacing": "",
    "line-height": "",
    "margin": "",
    "min-height": "",
    "min-width": "",
    "outline": "",
    "padding": undefined,
    "padding-right": "",
    "position": "",
    "text-align": "",
    "text-decoration": "",
    "text-indent": "",
    "text-rendering": "",
    "text-shadow": "",
    "text-transform": "",
    "transition": "",
    "user-select": "",
    "vertical-align": "",
    "visibility": undefined,
    "word-spacing": "",
  },
  "_length": 32,
  "_onChange": [Function],
  "_values": {
    "align-items": "center",
    "background-color": "transparent",
    "border": "0px",
    "border-bottom": "0px",
    "border-bottom-color": "buttonface",
    "border-bottom-style": "outset",
    "border-bottom-width": "0px",
    "border-left": "0px",
    "border-left-color": "buttonface",
    "border-left-style": "outset",
    "border-left-width": "0px",
    "border-radius": "2px",
    "border-right": "0px",
    "border-right-color": "buttonface",
    "border-right-style": "outset",
    "border-right-width": "0px",
    "border-top": "0px",
    "border-top-color": "buttonface",
    "border-top-style": "outset",
    "border-top-width": "0px",
    "border-width": "0px",
    "box-sizing": "border-box",
    "color": "rgb(38, 196, 193)",
    "cursor": "pointer",
    "display": "inline-flex",
    "font": "-webkit-small-control",
    "font-family": "Avenir Next,Roboto,Helvetica,Arial,sans-serif",
    "font-size": "11px",
    "font-weight": "400",
    "justify-content": "center",
    "letter-spacing": "0.55px",
    "line-height": "1.75",
    "margin": "0px",
    "margin-bottom": "0px",
    "margin-left": "0px",
    "margin-right": "0px",
    "margin-top": "0px",
    "min-height": "36px",
    "min-width": "76px",
    "outline": "0",
    "padding": "6px 18px 6px 18px",
    "padding-bottom": "6px",
    "padding-left": "18px",
    "padding-right": "18px",
    "padding-top": "6px",
    "position": "relative",
    "text-align": "center",
    "text-decoration": "none",
    "text-indent": "0",
    "text-rendering": "auto",
    "text-shadow": "none",
    "text-transform": "none",
    "transition": "background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
    "user-select": "none",
    "vertical-align": "baseline",
    "visibility": "visible",
    "word-spacing": "normal",
  },
}
`;

exports[`components/inputs/ZigButton renders ZigButton xlarge size 1`] = `
<button
  class="MuiLoadingButton-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeXlarge MuiButton-containedSizeXlarge MuiButtonBase-root css-q0r81f-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
  id=":r3:"
  tabindex="0"
  type="button"
/>
`;

exports[`components/inputs/ZigButton renders ZigButton xlarge size 2`] = `
CSSStyleDeclaration {
  "0": "font",
  "1": "text-rendering",
  "10": "align-items",
  "11": "cursor",
  "12": "color",
  "13": "padding",
  "14": "background-color",
  "15": "box-sizing",
  "16": "justify-content",
  "17": "position",
  "18": "outline",
  "19": "border",
  "2": "letter-spacing",
  "20": "margin",
  "21": "border-radius",
  "22": "user-select",
  "23": "vertical-align",
  "24": "text-decoration",
  "25": "font-family",
  "26": "font-weight",
  "27": "font-size",
  "28": "min-width",
  "29": "transition",
  "3": "word-spacing",
  "30": "box-shadow",
  "31": "overflow",
  "32": "z-index",
  "33": "min-height",
  "34": "visibility",
  "4": "line-height",
  "5": "text-transform",
  "6": "text-indent",
  "7": "text-shadow",
  "8": "display",
  "9": "text-align",
  "_importants": {
    "align-items": "",
    "background": "",
    "background-color": "",
    "border": "",
    "border-radius": "",
    "box-shadow": "",
    "box-sizing": "",
    "color": "",
    "cursor": "",
    "display": "",
    "font": "",
    "font-family": "",
    "font-size": "",
    "font-weight": "",
    "justify-content": "",
    "letter-spacing": "",
    "line-height": "",
    "margin": "",
    "min-height": "",
    "min-width": "",
    "outline": "",
    "overflow": "",
    "padding": "",
    "position": "",
    "text-align": "",
    "text-decoration": "",
    "text-indent": "",
    "text-rendering": "",
    "text-shadow": "",
    "text-transform": "",
    "transition": "",
    "user-select": "",
    "vertical-align": "",
    "visibility": undefined,
    "word-spacing": "",
    "z-index": "",
  },
  "_length": 35,
  "_onChange": [Function],
  "_values": {
    "align-items": "center",
    "background-color": "rgb(118, 130, 247)",
    "border": "0px",
    "border-bottom": "0px",
    "border-bottom-color": "buttonface",
    "border-bottom-style": "outset",
    "border-bottom-width": "0px",
    "border-left": "0px",
    "border-left-color": "buttonface",
    "border-left-style": "outset",
    "border-left-width": "0px",
    "border-radius": "5px",
    "border-right": "0px",
    "border-right-color": "buttonface",
    "border-right-style": "outset",
    "border-right-width": "0px",
    "border-top": "0px",
    "border-top-color": "buttonface",
    "border-top-style": "outset",
    "border-top-width": "0px",
    "border-width": "0px",
    "box-shadow": "0px 12px 16px -8px rgba(25, 25, 39, 0.36)",
    "box-sizing": "border-box",
    "color": "rgb(225, 233, 240)",
    "cursor": "pointer",
    "display": "inline-flex",
    "font": "-webkit-small-control",
    "font-family": "Avenir Next,Roboto,Helvetica,Arial,sans-serif",
    "font-size": "16px",
    "font-weight": "600",
    "justify-content": "center",
    "letter-spacing": "1.1px",
    "line-height": "20px",
    "margin": "0px",
    "margin-bottom": "0px",
    "margin-left": "0px",
    "margin-right": "0px",
    "margin-top": "0px",
    "min-height": "60px",
    "min-width": "127px",
    "outline": "0",
    "overflow": "hidden",
    "padding": "10px 36px",
    "padding-bottom": "10px",
    "padding-left": "36px",
    "padding-right": "36px",
    "padding-top": "10px",
    "position": "relative",
    "text-align": "center",
    "text-decoration": "none",
    "text-indent": "0",
    "text-rendering": "auto",
    "text-shadow": "none",
    "text-transform": "uppercase",
    "transition": "background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
    "user-select": "none",
    "vertical-align": "middle",
    "visibility": "visible",
    "word-spacing": "normal",
    "z-index": "1",
  },
}
`;
